--- a/styles/Mainstyle.css
+++ b/styles/Mainstyle.css
@@ -32,7 +32,8 @@ html, body {
 .menu {
     position: fixed;
     overflow: hidden;
-    top: 60px;
+    top: 0;
+    right: 0;
     border-style: solid;
     border-color: #3d3d3d;
     border-width: 1px;
@@ -94,7 +95,7 @@ header a {
     color: #ffffff;
     padding-left: 10px;
     padding-right: 10px;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 a {
@@ -211,12 +212,22 @@ button:hover {
     background-color: #5028bd;
 }
 
+.sep {
+    display: none;
+}
+
 @media (max-width: 750px) {
     .head-links {
         display: none;
     }
 
     .menu-button {
+        display: block;
+    }
+  }
+
+  @media (max-width: 290px) {
+    .sep {
         display: block;
     }
   }
