--- a/styles/Mainstyle.css
+++ b/styles/Mainstyle.css
@@ -23,7 +23,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: #272727;
+    background-color: #1f1f1f;
 }
 
 
